# rent-a-girlfriend

./: .gitattributes  .gitignore  Makefile
.agents/rules/: distributed-communication-patterns.md  universal-architecture-standards.md
contracts/common/: common.proto
contracts/event-schema/: cloudevents-schema.json
contracts/openapi/: identity-service.yaml
docs/01_Architecture_Overview/: 01_system_architecture.md  04_service_template.md
docs/02_Bounded_Contexts/: 06_identity_context.md
docs/03_Integration_and_Comms/: 01_api_and_event_bus.md  02_external_integrations.md
docs/04_Distributed_Transactions/: 01_saga_reliability.md  02_saga_workflows.md
docs/05_Implementation_Plan/: implementation_timeline.md
docs/plan/: fluxcd_gitops_plan.md
docs/reference/: auth_implementation_details.md
infra/istio/: request-authentication.yaml  strip-identity-headers.yaml
infra/kind/: cluster.yaml
infra/scripts/: deploy.sh  istio-install.sh  istio-uninstall.sh  registry.sh  setup.sh  teardown.sh
services/profile-service/: Dockerfile  Makefile  main.py  pyproject.toml
services/profile-service/internal/domain/aggregate/: media_asset.py
services/profile-service/internal/domain/events/: __init__.py
services/profile-service/internal/infrastructure/broker/: outbox_publisher.py
services/profile-service/internal/infrastructure/mappers/: event_mapper.py
services/profile-service/internal/interfaces/grpc/: __init__.py  servicer.py
services/profile-service/scripts/: generate_openapi.py
services/profile-service/tests/integration/: test_grpc.py
(+342 files in other folders)
